# rusted-attractors

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: attractors.rs  camera.rs  main.rs  shapes.rs  ui.rs  window.rs
src/attractors/: aizawa.rs  chen.rs  dadras.rs  four_wing.rs  halvorsen.rs  lorenz.rs  mod.rs  sprott.rs  thomas.rs  three_scroll.rs
src/camera/: mod.rs  orbit_camera.rs  orbit_camera_controls.rs
src/lorenz/: attractor.rs  lorenz.rs  mod.rs
src/shapes/: mod.rs
src/sprott/: attractor.rs  mod.rs  sprott.rs
src/user_interface/: components.rs  mod.rs
src/user_interface/button/: components.rs  styles.rs
src/user_interface/main_menu/: interactions.rs  layout.rs  mod.rs  style.rs  styles.rs
src/user_interface/selector/: mod.rs
src/viewer/: mod.rs  viewer.rs
src/window/: line.rs  mod.rs  node.rs  setup.rs  system.rs  transitions.rs
