[package]
name = "chaotic-attractors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_flycam = { git = "https://github.com/NiklasEI/bevy_flycam.git", branch = "bevy_main" }

[profile.dev.package."*"]
opt-level = 3
