[package]
name = "chaotic-attractors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_flycam = { git = "https://github.com/NiklasEI/bevy_flycam.git", branch = "bevy_main" }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
